src/objects/Invoice_Past_Due_Date_Offsets__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Invoice_Past_Due_120_Days__c</fullName>
        <label>Invoice Past Due 120 Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Past_Due_30_Days__c</fullName>
        <label>Invoice Past Due 30 Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Past_Due_60_Days__c</fullName>
        <label>Invoice Past Due 60 Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Past Due Date Offsets</label>
</CustomObject>